--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -161,29 +161,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MergeSort Implementation\n",
+    "\n",
+    "Below, we illustrate the implementation of the Mergesort algorithm:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Partial sorted init: [3, 3, 4, 5, 6, 1, 2, 3, 6, 7]\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-7a89590ad20d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0maux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0mmerge_alg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMergeSort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m \u001b[0msorted_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge_alg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Sorted array:        {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-14-7a89590ad20d>\u001b[0m in \u001b[0;36msort\u001b[0;34m(self, vec, aux, lo, hi)\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mmid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlo\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhi\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-14-7a89590ad20d>\u001b[0m in \u001b[0;36msort\u001b[0;34m(self, vec, aux, lo, hi)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-14-7a89590ad20d>\u001b[0m in \u001b[0;36mmerge\u001b[0;34m(self, vec, aux, lo, mid, hi)\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;31m# merging part of merge sort\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_sorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_sorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmid\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+      "Partial sorted init: [3, 3, 4, 5, 6, 1, 2, 3, 6, 7]\n",
+      "Sorted array:        [1, 2, 3, 3, 3, 4, 5, 6, 6, 7]\n"
      ]
     }
    ],
@@ -195,7 +191,7 @@
     "\n",
     "    def sort(self, vec, aux, lo, hi):\n",
     "        if hi <= lo:\n",
-    "            return\n",
+    "            return vec\n",
     "        mid = lo + (hi - lo)/2\n",
     "        self.sort(vec, aux, lo, mid)\n",
     "        self.sort(vec, aux, mid+1, hi)\n",
@@ -242,7 +238,7 @@
     "print('Partial sorted init: {}'.format(vec))\n",
     "aux = []\n",
     "merge_alg = MergeSort()\n",
-    "sorted_vec = merge_alg.sort(vec, aux, 0, len(vec))\n",
+    "sorted_vec = merge_alg.sort(vec, aux, 0, len(vec)-1)\n",
     "print('Sorted array:        {}'.format(sorted_vec))"
    ]
   },
@@ -253,7 +249,7 @@
     "## Merge Sort Trace\n",
     "\n",
     "| call                               |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |  15   |\n",
-    "| ---------------------------------- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |\n",
+    "| :--------------------------------- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |\n",
     "| Init:                              | **M** | **E** | **R** | **G** | **E** | **S** | **O** | **R** | **T** | **E** | **X** | **A** | **M** | **P** | **L** | **E** |\n",
     "| merge(vec, aux, **0**, 0, *1*)     | **E** | **M** |   R   |   G   |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
     "| merge(vec, aux, **2**, 2, *3*)     |   E   |   M   | **G** | **R** |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
@@ -269,15 +265,98 @@
     "| merge(vec, aux, **14**, 14, *15*)  |   E   |   E   |   G   |   M   |   O   |   R   |   R   |   S   |   A   |   E   |   T   |   X   |   M   |   P   | **E** | **L** |\n",
     "| merge(vec, aux, **12**, 13, *15*)  |   E   |   E   |   G   |   M   |   O   |   R   |   R   |   S   |   A   |   E   |   T   |   X   | **E** | **L** | **M** | **P** |\n",
     "| merge(vec, aux, **8**, 11, *15*)   |   E   |   E   |   G   |   M   |   O   |   R   |   R   |   S   | **A** | **E** | **E** | **L** | **M** | **P** | **T** | **X** |\n",
-    "| merge(vec, aux, **0**, 7, *15*)    | **A** | **E** | **E** | **E** | **E** | **G** | **L** | **M** | **M** | **O** | **P** | **R** | **R** | **S** | **T** | **X** |"
+    "| merge(vec, aux, **0**, 7, *15*)    | **A** | **E** | **E** | **E** | **E** | **G** | **L** | **M** | **M** | **O** | **P** | **R** | **R** | **S** | **T** | **X** |\n",
+    "\n",
+    "An example of the algorithm working can be seen below:\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/heray1990/AlgorithmVisualization/master/images/merge_sort_50samples_fps30_dpi50.gif\" width=\"40%\">\n",
+    "\n",
+    "\n",
+    "## Mergesort: Number of Compares and Array Accesses\n",
+    "\n",
+    "Mergesort uses at most $N \\lg N$ compares and $6N \\lg N$ array accesses to sort any array of size $N$. To understand it, consider that the number of compares $C(N)$ and array accesses $A(N)$ to mergesort an array of size $N$ satisfy the recurrences:\n",
+    "\n",
+    "$$C(N) \\leq C(\\lceil N/2\\rceil) + C(\\lfloor N/2 \\rfloor) + N \\text{for} N > 1, \\text{with} C(1) = 0$$<br>\n",
+    "$$A(N) \\leq A(\\lceil N/2\\rceil) + A(\\lfloor N/2 \\rfloor) + 6N \\text{for} N > 1, \\text{with} A(1) = 0$$\n",
+    "\n",
+    "where $C(\\lceil N/2\\rceil)$ and $A(\\lceil N/2\\rceil)$ represent the left half, $C(\\lfloor N/2 \\rfloor)$ and $A(\\lfloor N/2 \\rfloor)$ the right half, and finally, $N$ and $6N$ are the merge. We solve the recurrence when $N$ is a power of 2 (result holds for all $N$).\n",
+    "\n",
+    "$$ D(N) = 2D(N/2) + N, \\text{for} N > 1, \\text{with} D(1) = 0$$\n",
+    "\n",
+    "\n",
+    "## Improvements in Mergesort\n",
+    "\n",
+    "- **Use insertion sort for small subarrays**: As Mergesort has too much overhead for tiny subarrays, it is a better option to perform Insertion sort when the size of the array is too small. A good cutoff to use insertion sort is about 7 items.\n",
+    "\n",
+    "```python\n",
+    "def sort(self, vec, aux, lo, hi):\n",
+    "    if hi <= lo + CUTOFF - 1:\n",
+    "        vec = Insertion.sort(a, lo, hi)\n",
+    "        return vec\n",
+    "\n",
+    "    if hi <= lo:\n",
+    "        return\n",
+    "    mid = lo + (hi - lo)/2\n",
+    "    self.sort(vec, aux, lo, mid)\n",
+    "    self.sort(vec, aux, mid+1, hi)\n",
+    "    vec = self.merge(vec, aux, lo, mid, hi)\n",
+    "    return vec\n",
+    "```\n",
+    "\n",
+    "- **Stop if already sorted**: Before trying to merge two arrays, verify if they are already completely sorted, *i.e.*, if the biggest item in first half is lower or equal to the smallest item in second half. It also works for for partially-ordered arrays.\n",
+    "\n",
+    "```python\n",
+    "def sort(self, vec, aux, lo, hi):\n",
+    "    if hi <= lo:\n",
+    "        return\n",
+    "    mid = lo + (hi - lo)/2\n",
+    "    self.sort(vec, aux, lo, mid)\n",
+    "    self.sort(vec, aux, mid+1, hi)\n",
+    "    if (!less(vec[mid+1], vec[mid])) \n",
+    "        return vec\n",
+    "    vec = self.merge(vec, aux, lo, mid, hi)\n",
+    "    return vec\n",
+    "```\n",
+    "\n",
+    "- **Eliminate the copy to the auxiliary array**: You can save time (but not space) by switching the role of the input and auxiliary array in each recursive call.\n",
+    "\n",
+    "```python\n",
+    "def merge(self, vec, aux, lo, mid, hi):\n",
+    "    i, j = lo, mid+1\n",
+    "\n",
+    "    for k in range(lo, hi):\n",
+    "        if i > mid:\n",
+    "            aux[k] = vec[j]\n",
+    "            j += 1\n",
+    "        elif j > hi:\n",
+    "            aux[k] = vec[i]\n",
+    "            i += 1\n",
+    "        elif self.less(aux[j], aux[i]):\n",
+    "            aux[k] = vec[j]\n",
+    "            j += 1\n",
+    "        else:\n",
+    "            aux[k] = vec[i]\n",
+    "            i += 1\n",
+    "    return aux\n",
+    "\n",
+    "def sort(self, vec, aux, lo, hi):\n",
+    "    if hi <= lo:\n",
+    "        return\n",
+    "    mid = lo + (hi - lo)/2\n",
+    "    self.sort(vec, aux, lo, mid)\n",
+    "    self.sort(vec, aux, mid+1, hi)\n",
+    "    vec = self.merge(aux, vec, lo, mid, hi)\n",
+    "    return vec\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Bottom Up Mergesort\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
