--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -355,7 +355,154 @@
    "metadata": {},
    "source": [
     "# Bottom Up Mergesort\n",
-    "\n"
+    "\n",
+    "Instead of using recursive function to perform Mergesort, we can use a `for` loop to merge arrays. Initially, we merge all subarrays of size 1. Then, we repeat for subarrays of size 2, 4, 8, 16, and so on so forth. A visualization of the bottom up Mergesort can be seen by its trace illustred below.\n",
+    "\n",
+    "| call                               |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |  15   |\n",
+    "| :--------------------------------- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |\n",
+    "| Init:                              | **M** | **E** | **R** | **G** | **E** | **S** | **O** | **R** | **T** | **E** | **X** | **A** | **M** | **P** | **L** | **E** |\n",
+    "| merge(vec, aux, **0**, 0, *1*)     | **E** | **M** |   R   |   G   |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
+    "| merge(vec, aux, **2**, 2, *3*)     |   E   |   M   | **G** | **R** |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
+    "| merge(vec, aux, **4**, 4, *5*)     |   E   |   M   |   G   |   R   | **E** | **S** |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
+    "| merge(vec, aux, **6**, 6, *7*)     |   E   |   M   |   G   |   R   |   E   |   S   | **O** | **R** |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
+    "| merge(vec, aux, **8**, 8, *9*)     |   E   |   M   |   G   |   R   |   E   |   S   |   O   |   R   | **E** | **T** |   X   |   A   |   M   |   P   |   L   |   E   |\n",
+    "| merge(vec, aux, **10**, 10, *11*)  |   E   |   M   |   G   |   R   |   E   |   S   |   O   |   R   |   E   |   T   | **A** | **X** |   M   |   P   |   L   |   E   |\n",
+    "| merge(vec, aux, **12**, 12, *13*)  |   E   |   M   |   G   |   R   |   E   |   S   |   O   |   R   |   E   |   T   |   A   |   X   | **M** | **P** |   L   |   E   |\n",
+    "| merge(vec, aux, **14**, 14, *15*)  |   E   |   M   |   G   |   R   |   E   |   S   |   O   |   R   |   E   |   T   |   A   |   X   |   M   |   P   | **E** | **L** |\n",
+    "| merge(vec, aux, **0**, 1, *3*)     | **E** | **G** | **M** | **R** |   E   |   S   |   O   |   R   |   E   |   T   |   A   |   X   |   M   |   P   |   E   |   L   |\n",
+    "| merge(vec, aux, **4**, 5, *7*)     |   E   |   G   |   M   |   R   | **E** | **O** | **R** | **S** |   E   |   T   |   A   |   X   |   M   |   P   |   E   |   L   |\n",
+    "| merge(vec, aux, **8**, 9, *11*)    |   E   |   G   |   M   |   R   |   E   |   O   |   R   |   S   | **A** | **E** | **T** | **X** |   M   |   P   |   E   |   L   |\n",
+    "| merge(vec, aux, **12**, 13, *15*)  |   E   |   G   |   M   |   R   |   E   |   O   |   R   |   S   |   A   |   E   |   T   |   X   | **E** | **L** | **M** | **P** |\n",
+    "| merge(vec, aux, **0**, 3, *7*)     | **E** | **E** | **G** | **M** | **O** | **R** | **R** | **S** |   A   |   E   |   T   |   X   |   E   |   L   |   M   |   P   |\n",
+    "| merge(vec, aux, **8**, 11, *15*)   |   E   |   E   |   G   |   M   |   O   |   R   |   R   |   S   | **A** | **E** | **E** | **L** | **M** | **P** | **T** | **X** |\n",
+    "| merge(vec, aux, **0**, 7, *15*)    | **A** | **E** | **E** | **E** | **E** | **G** | **L** | **M** | **M** | **O** | **P** | **R** | **R** | **S** | **T** | **X** |\n",
+    "\n",
+    "The implementation of the algorithm is described below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Partial sorted init: [3, 3, 4, 5, 6, 1, 2, 3, 6, 7]\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'sz' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-46076352e6ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0maux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0mmerge_alg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMergeSort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m \u001b[0msorted_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge_alg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Sorted array:        {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-46076352e6ac>\u001b[0m in \u001b[0;36msort\u001b[0;34m(self, vec, aux, lo, hi)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0maux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0msz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msz\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mlo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msz\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                 \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlo\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'sz' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# Implementing the whole MergeSort class\n",
+    "class MergeSort(object):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def sort(self, vec, aux, lo, hi):\n",
+    "        N = len(vec)\n",
+    "        aux = vec[:]\n",
+    "        mul = 1\n",
+    "        for sz in range(1, N, mul):\n",
+    "            mul += mul\n",
+    "            for lo in range(0, N-sz, sz+sz):\n",
+    "                vec = merge(vec, aux, lo, lo+sz-1, min(lo+sz+sz-1, N-1))\n",
+    "        return vec\n",
+    "\n",
+    "    def less(self, v, w):\n",
+    "        return v.compare_to(w) < 0\n",
+    "    \n",
+    "    def is_sorted(self, vec, lo, hi):\n",
+    "        last = float('-inf')\n",
+    "        for i in range(lo, hi):\n",
+    "            if vec[i] > last:\n",
+    "                last = vec[i]\n",
+    "            else:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    # merging part keeps equal to the recursive\n",
+    "    def merge(self, vec, aux, lo, mid, hi):\n",
+    "        #assert self.is_sorted(vec, lo, mid)\n",
+    "        #assert self.is_sorted(vec, mid+1, hi)\n",
+    "        \n",
+    "        aux = vec[:]\n",
+    "        i, j = lo, mid+1\n",
+    "\n",
+    "        for k in range(lo, hi):\n",
+    "            if i > mid:\n",
+    "                vec[k] = aux[j]\n",
+    "                j += 1\n",
+    "            elif j > hi:\n",
+    "                vec[k] = aux[i]\n",
+    "                i += 1\n",
+    "            elif self.less(aux[j], aux[i]):\n",
+    "                vec[k] = aux[j]\n",
+    "                j += 1\n",
+    "            else:\n",
+    "                vec[k] = aux[i]\n",
+    "                i += 1\n",
+    "        return vec\n",
+    "            \n",
+    "vec = [Integer(3), Integer(3), Integer(4), Integer(5), Integer(6), \n",
+    "       Integer(1), Integer(2), Integer(3), Integer(6), Integer(7)]\n",
+    "print('Partial sorted init: {}'.format(vec))\n",
+    "aux = []\n",
+    "merge_alg = MergeSort()\n",
+    "sorted_vec = merge_alg.sort(vec, aux, 0, len(vec)-1)\n",
+    "print('Sorted array:        {}'.format(sorted_vec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 1\n",
+      "2 2 3\n",
+      "4 4 5\n",
+      "6 6 7\n",
+      "8 8 9\n",
+      "0 1 3\n",
+      "4 5 7\n",
+      "0 2 5\n",
+      "6 8 9\n",
+      "0 3 7\n",
+      "0 4 9\n",
+      "0 5 9\n",
+      "0 6 9\n",
+      "0 7 9\n",
+      "0 8 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "mul = 1\n",
+    "N = 10\n",
+    "for sz in range(1, N, mul): #sizes\n",
+    "    val = sz+sz\n",
+    "    for lo in range(0, N-sz, val):\n",
+    "        val = lo + sz + sz\n",
+    "        print lo, lo+sz-1, min(lo+sz+sz-1, N-1)\n",
+    "    mul += mul\n",
+    "    #\n",
+    "    "
    ]
   },
   {
@@ -378,11 +525,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. How many passes (over the input array) does bottom-up mergesort make in the worst case?<br>\n",
+    "\n",
+    "&#9744; constant<br>\n",
+    "&#9745; logarithmic<br>\n",
+    "&#9744; linear<br>\n",
+    "&#9744; linearithmic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "&#9744; "
+   ]
   }
  ],
  "metadata": {
