--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -406,14 +406,15 @@
     }
    ],
    "source": [
-    "# Implementing the whole MergeSort class\n",
+    "# Implementing the bottom up MergeSort\n",
     "class MergeSort(object):\n",
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
-    "    def sort(self, vec, aux, lo, hi):\n",
+    "    def sort(self, vec):\n",
     "        N = len(vec)\n",
     "        aux = vec[:]\n",
+    "        \n",
     "        mul = 1\n",
     "        for sz in range(1, N, mul):\n",
     "            mul += mul\n",
@@ -461,45 +462,36 @@
     "print('Partial sorted init: {}'.format(vec))\n",
     "aux = []\n",
     "merge_alg = MergeSort()\n",
-    "sorted_vec = merge_alg.sort(vec, aux, 0, len(vec)-1)\n",
+    "sorted_vec = merge_alg.sort(vec)\n",
     "print('Sorted array:        {}'.format(sorted_vec))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 1\n",
-      "2 2 3\n",
-      "4 4 5\n",
-      "6 6 7\n",
-      "8 8 9\n",
-      "0 1 3\n",
-      "4 5 7\n",
-      "0 2 5\n",
-      "6 8 9\n",
-      "0 3 7\n",
-      "0 4 9\n",
-      "0 5 9\n",
-      "0 6 9\n",
-      "0 7 9\n",
-      "0 8 9\n"
+      "1 1\n",
+      "3 2\n",
+      "5 4\n",
+      "7 8\n",
+      "9 16\n"
      ]
     }
    ],
    "source": [
     "mul = 1\n",
     "N = 10\n",
-    "for sz in range(1, N, mul): #sizes\n",
-    "    val = sz+sz\n",
-    "    for lo in range(0, N-sz, val):\n",
-    "        val = lo + sz + sz\n",
-    "        print lo, lo+sz-1, min(lo+sz+sz-1, N-1)\n",
+    "for sz in range(1, N, 2): #sizes\n",
+    "    print sz, mul\n",
+    "    #val = sz+sz\n",
+    "    #for lo in range(0, N-sz, val):\n",
+    "    #    val = lo + sz + sz\n",
+    "    #    print lo, lo+sz-1, min(lo+sz+sz-1, N-1)\n",
     "    mul += mul\n",
     "    #\n",
     "    "
