--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -382,32 +382,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Partial sorted init: [3, 3, 4, 5, 6, 1, 2, 3, 6, 7]\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'sz' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-46076352e6ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0maux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0mmerge_alg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMergeSort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m \u001b[0msorted_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge_alg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Sorted array:        {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-20-46076352e6ac>\u001b[0m in \u001b[0;36msort\u001b[0;34m(self, vec, aux, lo, hi)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0maux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0msz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msz\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mlo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msz\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                 \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlo\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlo\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msz\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'sz' referenced before assignment"
+      "Unordered init: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+      "Size 2: [8, 9, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+      "Size 2: [8, 9, 6, 7, 5, 4, 3, 2, 1, 0]\n",
+      "Size 2: [8, 9, 6, 7, 4, 5, 3, 2, 1, 0]\n",
+      "Size 2: [8, 9, 6, 7, 4, 5, 2, 3, 1, 0]\n",
+      "Size 2: [8, 9, 6, 7, 4, 5, 2, 3, 0, 1]\n",
+      "Size 4: [6, 7, 8, 9, 4, 5, 2, 3, 0, 1]\n",
+      "Size 4: [6, 7, 8, 9, 2, 3, 4, 5, 0, 1]\n",
+      "Size 8: [2, 3, 4, 5, 6, 7, 8, 9, 0, 1]\n",
+      "Size 16: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Sorted array:   [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
    "source": [
+    "# Load Integer class\n",
+    "%run ./integer_class.py\n",
+    "\n",
     "# Implementing the bottom up MergeSort\n",
-    "class MergeSort(object):\n",
+    "class BUMergeSort(object):\n",
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
@@ -415,11 +416,14 @@
     "        N = len(vec)\n",
     "        aux = vec[:]\n",
     "        \n",
-    "        mul = 1\n",
-    "        for sz in range(1, N, mul):\n",
-    "            mul += mul\n",
-    "            for lo in range(0, N-sz, sz+sz):\n",
-    "                vec = merge(vec, aux, lo, lo+sz-1, min(lo+sz+sz-1, N-1))\n",
+    "        sz = 1\n",
+    "        while sz < N: #sizes\n",
+    "            lo = 0\n",
+    "            while lo < N-sz:\n",
+    "                self.merge(vec, aux, lo, lo+sz-1, min(lo+sz+sz-1, N-1))\n",
+    "                print('Size {}: {}'.format(sz+sz, vec))\n",
+    "                lo += sz+sz\n",
+    "            sz += sz                \n",
     "        return vec\n",
     "\n",
     "    def less(self, v, w):\n",
@@ -438,11 +442,10 @@
     "    def merge(self, vec, aux, lo, mid, hi):\n",
     "        #assert self.is_sorted(vec, lo, mid)\n",
     "        #assert self.is_sorted(vec, mid+1, hi)\n",
-    "        \n",
     "        aux = vec[:]\n",
     "        i, j = lo, mid+1\n",
     "\n",
-    "        for k in range(lo, hi):\n",
+    "        for k in range(lo, hi+1):\n",
     "            if i > mid:\n",
     "                vec[k] = aux[j]\n",
     "                j += 1\n",
@@ -457,44 +460,21 @@
     "                i += 1\n",
     "        return vec\n",
     "            \n",
-    "vec = [Integer(3), Integer(3), Integer(4), Integer(5), Integer(6), \n",
-    "       Integer(1), Integer(2), Integer(3), Integer(6), Integer(7)]\n",
-    "print('Partial sorted init: {}'.format(vec))\n",
+    "vec = [Integer(9), Integer(8), Integer(7), Integer(6), Integer(5), \n",
+    "       Integer(4), Integer(3), Integer(2), Integer(1), Integer(0)]\n",
+    "print('Unordered init: {}'.format(vec))\n",
     "aux = []\n",
-    "merge_alg = MergeSort()\n",
+    "merge_alg = BUMergeSort()\n",
     "sorted_vec = merge_alg.sort(vec)\n",
-    "print('Sorted array:        {}'.format(sorted_vec))"
+    "print('Sorted array:   {}'.format(sorted_vec))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1\n",
-      "3 2\n",
-      "5 4\n",
-      "7 8\n",
-      "9 16\n"
-     ]
-    }
-   ],
    "source": [
-    "mul = 1\n",
-    "N = 10\n",
-    "for sz in range(1, N, 2): #sizes\n",
-    "    print sz, mul\n",
-    "    #val = sz+sz\n",
-    "    #for lo in range(0, N-sz, val):\n",
-    "    #    val = lo + sz + sz\n",
-    "    #    print lo, lo+sz-1, min(lo+sz+sz-1, N-1)\n",
-    "    mul += mul\n",
-    "    #\n",
-    "    "
+    "# Sorting Complexity\n",
+    "\n"
    ]
   },
   {
