--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -359,7 +359,7 @@
     "Instead of using recursive function to perform Mergesort, we can use a `for` loop to merge arrays. Initially, we merge all subarrays of size 1. Then, we repeat for subarrays of size 2, 4, 8, 16, and so on so forth. A visualization of the bottom up Mergesort can be seen by its trace illustred below.\n",
     "\n",
     "| call                               |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |  15   |\n",
-    "| :--------------------------------- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |\n",
+    "| :--------------------------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
     "| Init:                              | **M** | **E** | **R** | **G** | **E** | **S** | **O** | **R** | **T** | **E** | **X** | **A** | **M** | **P** | **L** | **E** |\n",
     "| merge(vec, aux, **0**, 0, *1*)     | **E** | **M** |   R   |   G   |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
     "| merge(vec, aux, **2**, 2, *3*)     |   E   |   M   | **G** | **R** |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
@@ -474,8 +474,67 @@
    "metadata": {},
    "source": [
     "# Sorting Complexity\n",
-    "\n"
+    "\n",
+    "The complexity of the algorithm can be understood as the intrinsic difficulty for solving a problem. The idea of complexity is to be a framework for studying the efficiency of all the algorithms for solving a particular problem. In sorting, we have operations that the algorithms are allowed to perform and what we are going to do is have a cost model where we count the comparisons. Thus, we have an **upper bound** which is a cost guarantee that is provided by some algorithm for solving the problem, *i.e.*, how difficult it is to solve the problem. We have a **lower bound** which is a limit on the cost guarantee of all algorithms. No algorithm can do better! Finally, the ideally is what is called an **optimal algorithm** where we prove that the **upper bound** and the **lower bound** are the same. Summarizing, we have:\n",
+    "\n",
+    "- **Upper bound**: Cost guarantee provided by some algorithm for X.\n",
+    "- **Lower bound**: Proven limit on cost guarantee of all algorithms for X.\n",
+    "- **Optimal algorithm**: Algorithm with best possible cost guarantee for X (lower bound ~ upper bound).\n",
+    "\n",
+    "For example, consider the Decision Tree algorithm.\n",
+    "\n",
+    "- Model of computation: Decision tree.\n",
+    "- Cost model: Numbe of compares.\n",
+    "- Upper bound: $\\sim N \\lg N$ from mergesort.\n",
+    "- **Lower bound: ?**\n",
+    "\n",
+    "For lower bound, we can think of a tree with `a`, `b` and `c` items. The order for these three distinct elements can be represented by the tree below:\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%203/images/decision_tree.svg\" width=\"60%\">\n",
+    "\n",
+    "In this tree, we see that the height of tree is equal to the worst-case number of compares, while in leaves we have (at least) one leaf for each possible ordering. Thus, no matter what the input is, the tree tells us a bound, *i.e.*, the number of compares taken by the algorithm. There is at least one leaf for each possible ordering. If there is some ordering that is not appear in a tree corresponding the particular algorithm, then that algorithm cannot sort, and cannot tell the difference between two different orderings.\n",
+    "\n",
+    "So, to the lower bound that uses the decision tree, as a proposition, we want to prove that any compare base sorting algorithm has to use at least $\\lg (N!)$ compares in the worst case. By Stirling's approximation, we know that $\\lg (N!) \\sim N \\lg N$.\n",
+    "\n",
+    "- **Optimal algorithm: ?**\n",
+    "\n",
+    "We assume that the array consist of $N$ distinct values and there is a position created that describes the performance of any algorithm to compare sequence done by any algorithm to determine the $N!$ different orderings. So, this three has to have at least $N!$ leaves and if the three of height $h$, it has utmost $2^h$ leaves. The tree that has the most leaves of height $h$ is totally complete and that one has $2^h$ leaves. Those observations give us the lower bound - $2^h$ has to be greater than or equal to the number of leaves, and the number of leaves has to be greater or equal to $N!$. So, that implies the height of the tree has to be greater than or equal to $\\lg (N!)$ which is proportional to $N \\lg N$ by Stirling's formula. That is a lower bound on the complexity of sorting. As we knew that the upper bound was $N \\lg N$ and the lower bound is proportional to $N \\lg N$, that means that mergesort is an **optimal algorithm**.\n",
+    "\n",
+    "\n",
+    "### Complexity results in context\n",
+    "\n",
+    "Taking these results in context, we proved is that mergesort is optimal with respect to number of compares but we already know that it is not optimal with respect to space usage. Mergesort uses twice as extra space proportional to the size of the array it has to sort - and simple algorithms like insertions or dump do not use any extra space at all. So, what we want to take from these theoretical results is a guide when we are looking at implementations and trying to solve practical problems.\n",
+    "\n",
+    "- **Compares:** Mergesort is optimal with respect to number compares.\n",
+    "- **Space:** Mergesort is not optimal with respect to space usage.\n",
+    "\n",
+    "Lower bound may not hold if the algorithm has information about:\n",
+    "- The initial order of the input.\n",
+    "- The distribution of key values.\n",
+    "- The representation of the keys.\n",
+    "\n",
+    "Depending on the initial order of the input (*e.g.*, considering partially-ordered arrays), we may not need $N \\lg N$ compares. For example, insertion sort requires only $N-1$ compares if input array is sorted. Depending on the input distribution of duplicates (*e.g.*, considering duplicate keys), we also may not need $N \\lg N$ compares. Finally, we can use digit/character compares instead of key compares for numbers and strings, what would lead us to less than $N \\lg N$ compares."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparators\n",
+    "\n",
+    "Comparators use the same data on different sort keys, *i.e.*, different orders. For example, in your music library, you may want to sort it by the artist's name. In another situation, you might want to sort it by song names to look through it by song names. That's the same data using different sort keys. In that concept, there is some natural ordering of the data that you want to use most of the time, and that is what the `Comparable` interface is all about. There is a different interface called the `Comparator` interface which is a way to help a sort, using some alternate order or many different orders on the same data. \n",
+    "\n",
+    "Comparator interface also implement a method `compare()` that compares two different keys of the generic type. For example, we might want to sort strings using the natural alphabetic order, or we might want to make it case insensitive, or maybe there is just different languages that have different rules of the ordering. Although we are sorting strings, we have different orderings on that same data. That's what the `Comparator` interface is for. \n",
+    "\n",
+    "The idea is that you create a comparator object and then pass that as a second argument to the sort routine.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -512,8 +571,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "3. Under which of the following scenarios does the $N \\lg N$ lower bound for sorting apply? Assume that the keys are accessed only through the `compare_to()` method unless otherwise specified.<br>\n",
+    "\n",
+    "&#9744; five distinct keys<br>\n",
+    "&#9745; no two keys are equal<br>\n",
+    "&#9744; keys in descending order<br>\n",
+    "&#9744; keys are strings and accessed via `char_at()` instead of `compare_to()` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Which of the following is a compelling reason to implement the `Comparator` interface instead of the `Comparable` interface in Java?<br>\n",
+    "\n",
+    "&#9744; Easier to use `Comparator` with `Arrays.sort()`<br>\n",
+    "&#9745; `Comparator` supports multiple orderings of a given data type<br>\n",
+    "&#9744; Easier to implement a total order with `Comparator` than `Comparable`<br>\n",
+    "&#9744; All of the above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "&#9744; "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
